--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -269,7 +269,7 @@ h1 {
 
 .services-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 20px;
   margin-left: 100px;
   margin-right: 100px;
@@ -306,7 +306,7 @@ h1 {
 }
 
 .icon-circle {
-  width: 7vw;
+  width: 5vw;
   height: 10vw;
   max-width: 100px;
   max-height: 60px;
@@ -320,7 +320,7 @@ h1 {
 }
 
 .icon-circle2 {
-  width: 7vw;
+  width: 5vw;
   height: 10vw;
   max-width: 100px;
   max-height: 60px;
@@ -494,7 +494,7 @@ hr {
 .contact {
   padding: 60px 20px;
   background-color: #001f3f;
-  text-align: center;
+  /* text-align: center; */
 }
 
 .contact p,
@@ -505,8 +505,8 @@ hr {
 .contact form {
   max-width: 500px;
   margin: 20px auto 0;
-  display: flex;
-  flex-direction: column;
+  display: flex; 
+  flex-direction: row;
   gap: 15px;
   background: rgba(255, 255, 255, 0.05);
   padding: 20px;
@@ -562,4 +562,91 @@ hr {
   .testimonial-list {
     padding: 0 10px;
   }
+}
+.logo-icon2 {
+  width: 100px;
+  height: 100px;
+}
+
+/* added 17-04-25 */
+.newsletter-section {
+  background-color: #001f3f;
+  color: gold;
+  padding: 40px 20px;
+}
+
+.newsletter-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 1000px;
+  margin: 0 auto;
+  flex-wrap: wrap;
+}
+
+.logo_newsletter {
+  display: flex;
+  align-items: center; /* Vertically center the text */
+}
+
+.logo_text {
+  font-size: 30px;
+  color: #ffffff;
+  padding-left: 20px;
+}
+
+.logo_newsletter img {
+  width: 100px;
+  height: 100px;
+}
+
+.subscription-box {
+  max-width: 600px;
+  flex: 1;
+  padding-left: 40px;
+}
+
+.description {
+  margin-bottom: 15px;
+  font-size: 16px;
+  line-height: 1.5;
+}
+
+.subscribe-form {
+  display: flex;
+  gap: 10px;
+  flex-wrap: wrap;
+}
+
+.subscribe-form input[type="email"] {
+  padding: 10px;
+  font-size: 14px;
+  border: none;
+  border-radius: 2px;
+  flex: 1;
+  min-width: 200px;
+}
+
+.subscribe-form input[type="phone"] {
+  padding: 10px;
+  font-size: 14px;
+  border: none;
+  border-radius: 2px;
+  flex: 1;
+  min-width: 200px;
+}
+
+.subscribe-form button {
+  background-color: #d9002c;;
+  color: white;
+  border: 2px solid white;
+  padding: 10px 20px;
+  cursor: pointer;
+  font-weight: bold;
+  transition: background-color 0.3s ease;
+}
+
+.subscribe-form button:hover {
+  background-color: white;
+  color: #d9002c;
 }
