--- a/src/app/components/contact-us/contact-us.component.css
+++ b/src/app/components/contact-us/contact-us.component.css
@@ -2,8 +2,8 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    padding: 2rem;
-    gap: 2rem;
+    padding: 2rem 10rem;
+    gap: 5rem;
   }
   
   .contact-info {
