--- a/src/app/components/contact-us/contact-us.component.html
+++ b/src/app/components/contact-us/contact-us.component.html
@@ -49,7 +49,6 @@
     </iframe>
   </div>
 </section>
-
 <div class="contact-container">
   <!-- LEFT SIDE -->
   <div class="contact-info2">
@@ -193,6 +192,7 @@
     </div>
   </div>
 </div>
+<section class="footer">
 <div class="contact-access-pane">
   <div class="contact-item">
     <div class="icon address-icon"></div>
@@ -247,6 +247,6 @@
     ></a>
     <a href="#" class="social youtube" aria-label="YouTube" target="_blank"></a>
     <a href="#" class="social tiktok" aria-label="TikTok" target="_blank"></a>
-      
   </div>
 </div>
+</section>
