--- a/src/app/components/contact-us/contact-us.component.html
+++ b/src/app/components/contact-us/contact-us.component.html
@@ -73,12 +73,12 @@
     <div>
       <div>
         <mat-card class="matcard">
-          <span [hidden]="!isBusy">
+          <!-- <span [hidden]="!isBusy">
             <mat-progress-bar
               mode="indeterminate"
               color="warn"
             ></mat-progress-bar>
-          </span>
+          </span> -->
           <mat-card-subtitle class="card__title">
             <h2>
               Please fill the form below. We guarantee 100% security of your
