--- a/src/app/modules/auth/forgot-password/forgot-password.component.html
+++ b/src/app/modules/auth/forgot-password/forgot-password.component.html
@@ -1,4 +1,4 @@
-<h2>Reset Password</h2>
+<Section><h2>Reset Password</h2>
 <form #resetForm="ngForm" (ngSubmit)="onSubmit()">
   <label for="email">Email address</label>
   <input type="email" id="email" name="email" [(ngModel)]="email" required />
@@ -21,4 +21,4 @@
         Close
     </button>
 
-</form>
+</form></Section>
